@@ -26,18 +26,18 @@
 @EXT@.o:
 	source='$<' object='$@' \
 	depfile='$(DEPDIR)/$*.Po' tmpdepfile='$(DEPDIR)/$*.TPo' \
-	$(@FPFX@DEPMODE) \
-	$(depcomp) $(@PFX@COMPILE) -c@MINUSO@ $<
+	$(@FPFX@DEPMODE) $(depcomp) \
+	$(@PFX@COMPILE) -c@MINUSO@ $<
 
 LIBTOOL@EXT@.lo:
 LIBTOOL	source='$<' object='$@' \
 LIBTOOL	depfile='$(DEPDIR)/$*.Plo' tmpdepfile='$(DEPDIR)/$*.TPlo' \
-LIBTOOL	$(@FPFX@DEPMODE) \
-LIBTOOL	$(depcomp) $(LT@PFX@COMPILE) -c -o $@ $<
+LIBTOOL	$(@FPFX@DEPMODE) $(depcomp) \
+LIBTOOL	$(LT@PFX@COMPILE) -c -o $@ $<
 
 OBJEXT@EXT@.obj:
 OBJEXT	source='$<' object='$@' \
 OBJEXT	depfile='$(DEPDIR)/$*.Pobj' tmpdepfile='$(DEPDIR)/$*.TPobj' \
-OBJEXT	$(@FPFX@DEPMODE) \
-OBJEXT	$(depcomp) $(@PFX@COMPILE) -c@MINUSO@ `cygpath -w $<`
+OBJEXT	$(@FPFX@DEPMODE) $(depcomp) \
+OBJEXT	$(@PFX@COMPILE) -c@MINUSO@ `cygpath -w $<`
 
