@@ -1,5 +1,8 @@
 1999-06-01  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* depend2.am: Move $(depcomp) to the line of $(...DEPMODE), so as
+	to leave $(...COMPILE) in a line by itself.
+
 	* THANKS: Added Miles Bader.
 
 1999-06-01  Miles Bader  <miles@ccs.mt.nec.co.jp>
